--- a/src/main.css
+++ b/src/main.css
@@ -5,6 +5,26 @@
        url('./mcfont.woff') format('woff');
 }
 
+#logo-text {
+	position: absolute;
+	color: yellow;
+	/*animation: bop 1s infinite;*/
+	transform: rotate(-15deg) perspective(500px) translate3d(320px, 180px, 0);
+	perspective: 100px;
+}
+
+@keyframes bop {
+	0% {
+		transform: rotate(-15deg) perspective(500px) translate3d(320px, 180px, 0);
+	}
+	50% {
+		transform: rotate(-15deg) perspective(500px) translate3d(320px, 180px, 100px);
+	}
+	100% {
+		transform: rotate(-15deg) perspective(500px) translate3d(320px, 180px, 0);
+	}
+}
+
 #version {
 	position: fixed;
 	bottom: 0;
@@ -18,6 +38,11 @@
 	right: 0;
 	font-size: 24px;
 	text-align: right;
+}
+
+.skin-change {
+	width: 90%;
+	height: 100%;;
 }
 
 .hero-container {
@@ -37,6 +62,20 @@
 
 .button-row {
 	height: 10vh;
+	display: flex;
+	justify-content: flex-start;
+	justify-items: center;
+	text-align: center;
+}
+
+.button-row .button {
+	display: block;
+	/*height: 100%;
+	align-content: space-around;
+	justify-content: center;
+	vertical-align: middle;
+	justify-self: center;
+	justify-items: center;*/
 }
 
 .hero-img-container {
@@ -66,7 +105,6 @@
 	font-family: "Noto Sans", sans-serif;
 	font-size: 1.75rem;
 	color: white;
-	font-weight: initial;
 }
 
 .hero-content span {
@@ -104,7 +142,7 @@
 	text-align: center;
 }
 */
-#news {
+#news, #player-customiser {
 	display: flex;
 	align-content: space-around;
 	vertical-align: middle;
